--- a/.github/workflows/import.yml
+++ b/.github/workflows/import.yml
@@ -18,6 +18,8 @@ jobs:
         with:
           gpg-private-key: ${{ secrets.GPG_PRIVATE_KEY }}
           passphrase: ${{ secrets.PASSPHRASE }}
+          git-user-signingkey: true
+          git-commit-gpgsign: true
       -
         name: GPG user IDs
         run: |
