--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -28,8 +28,8 @@ jobs:
       - name: Import GPG key 
         uses: crazy-max/ghaction-import-gpg@v3   
         with:
-          git_user_signingkey: true
-          git_commit_gpgsign: true 
+          git-user-signingkey: true
+          git-commit-gpgsign: true 
           gpg-private-key: ${{ secrets.GPG_PRIVATE_KEY }}
           passphrase: ${{ secrets.PASSPHRASE }}
         env:
