--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -27,6 +27,7 @@ jobs:
         
       - name: Import GPG key 
         uses: crazy-max/ghaction-import-gpg@v3   
+        id: import_gpg
         with:
           git-user-signingkey: true
           git-commit-gpgsign: true 
