--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -5,10 +5,8 @@
 # https://github.com/hashicorp/terraform-provider-scaffolding
 name: Release
 
-on:
-  push:
-    tags:
-      - 'v*'
+on: 
+  push
 
 jobs:
   goreleaser:
